fix z-index 低，被遮挡，并移动到左边

--- a/Tools/css/insert.css
+++ b/Tools/css/insert.css
@@ -1,7 +1,8 @@
 #hairpin_tools {
     position: fixed;
     bottom: 60px;
-    right: 60px;
+    left: 60px;
+    z-index: 20;
 }
 
 #hairpin_tools>div {
@@ -14,7 +15,6 @@
     box-shadow: 0 0 6px rgba(0, 0, 0, .12);
     border-radius: 50%;
     cursor: pointer;
-    z-index: 10;
     -webkit-user-select:none;
     -moz-user-select:none;
     -ms-user-select:none;
